# NovaKV

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  server_main.cpp
benchmark/: db_bench.cpp
docs/: 2026-03-05.md  2026-03-09.md  2026-03-09_网络主链路设计.md  AGENT.md  AGENT_CONTEXT.md  GTest Fixture.md  ImmutableMemTable设计原理.md  MANIFEST_SNAPSHOT_LOG_GUIDE.md  NovaKV QPS 基准测试.md  Phase3_REVIEW.md  Phase3_写串行_多读并发边界.md  Phase_1复盘.md  RESP解析.md  SET_GET_DEL_RSCAN_语义定义_V1.md  SET_GET_DEL_SCAN_语义定义_V1.md  SSTable 与 LSM-Tree 存储层.md  SSTableBuilder.md  SSTableReader.md  SSTable整体串联.md  SkipList跳表.md  TODO.md  WAL与SSTable.md  WriteAheadLog.md  callback.md  多线程并发版本跳表改造.md  布隆过滤器.md  测试结果.md  跳表.md  跳表各项测试.md  阶段性总结.md  静态工厂方法.md
docs/design/: Epoll与Reactor.md  LINUX_NETWORK_REACTOR.md  网络主链路设计.md
docs/guide/: GTest Fixture.md  HandleRead单线程读链路.md  HandleWrite回包链路.md  ITERATOR_IMPLEMENTATION_GUIDE.md  SSTable读取.md  TcpServer骨架总览.md  WAL与SSTable.md  WAL预写日志.md  WriteAheadLog.md  fcntl与非阻塞.md  回调函数.md  多线程并发版本跳表改造.md  并发跳表改造.md  新连接接入.md  日志模块.md  监听Socket初始化.md  跳表.md  静态工厂方法.md  项目运行逻辑总览.md
docs/log/: 2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-11.md  2026-03-12.md
docs/review/: ITERATOR_FEATURE_REVIEW_CN.md  Phase1复盘.md  Phase_1复盘.md  QPS基准.md
docs/spec/: RESP解析.md
include/: BlockBuilder.h  BloomFilter.h  CompactionEngine.h  DBImpl.h  DBIterator.h  FileFormats.h  ImmutableMemTable.h  Logger.h  ManifestManager.h  MemTable.h  RecoveryLoader.h  SSTableBuilder.h  SSTableReader.h  SkipList.h  Storage.h  ValueRecord.h  WalHandler.h  block_builder.h  skiplist.h
include/network/: CommandExecutor.h  Connection.h  NetworkBuffer.h  RESPEncoder.h  RESPParser.h  TcpServer.h  ThreadPool.h
src/: BlockBuilder.cpp  CompactionEngine.cpp  DBImpl.cpp  DBIterator.cpp  ImmutableMemTable.cpp  Logger.cpp  ManifestManager.cpp  RecoveryLoader.cpp  SSTableBuilder.cpp  SSTableReader.cpp  WalHandler.cpp
src/network/: CommandExecutor.cpp  Connection.cpp  NetworkBuffer.cpp  RESPEncoder.cpp  RESPParser.cpp  TcpServer.cpp
tests/: block_test.cpp  command_executor_test.cpp  compaction_test.cpp  dbimpl_test.cpp  iterator_test.cpp  memtable_test.cpp  resp_encoder_test.cpp  resp_test.cpp  skiplist_test.cpp  sstable_builder_test.cpp  sstable_fullcycle_test.cpp  sstable_reader_foreach_test.cpp
